# sprite-extractors

./: README.md
extractor/2d-toolkit/: .gitignore  README.md  settings.gradle.kts
extractor/2d-toolkit/app/: build.gradle.kts
extractor/2d-toolkit/app/src/main/java/org/example/: Sprite2dTK.java
extractor/2d-toolkit/example/: sample_image.bytes
extractor/2d-toolkit/gradle/: libs.versions.toml
extractor/cocos-2dx/: .gitignore  README.md  pyproject.toml
extractor/cocos-2dx/cocos_2dx_unpacker/: __init__.py  __main__.py  sprite_cocos_2dx.py
extractor/cocos-2dx/example/: sample_image.plist
extractor/love-2d/: .gitignore  README.1.md  README.md  pyproject.toml
extractor/love-2d/example/: sample_image.lua  sample_image2.lua
extractor/love-2d/love_2d_unpacker/: __init__.py  __main__.py  sprite_love_2d.py
extractor/love-2d/love_2d_unpacker/utils/: argument_parser.py  constants.py  file_checks.py
extractor/love-2d/love_2d_unpacker/utils/print/: help.py  success.py
extractor/love-2d/love_2d_unpacker/utils/process/: all.py  pattern.py  single.py
